tweaked styling fixed auth flicker bug and centered navbar

--- a/src/components/pages/Saved/Saved.scss
+++ b/src/components/pages/Saved/Saved.scss
@@ -7,3 +7,34 @@ h1 {
 .tattoos {
   justify-content: center;
 }
+
+nav {
+  font-family: $font1;
+  justify-content: center !important;
+  .navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: .5rem 1rem;
+  }
+  li {
+    list-style: none;
+  }
+  .nav-link {
+    font-size: 2rem;
+    display: inline-block;
+    justify-content: center;
+  }
+  #logoutBtn {
+    color: $ink;
+  }
+  #saveBtn {
+    color: $ink;
+  }
+  .navbar-brand {
+    color: $ink;
+    font-family: $font1;
+    font-size: 2rem;
+  }
+}
